--- a/lessons/github/exercise3.qmd
+++ b/lessons/github/exercise3.qmd
@@ -25,7 +25,7 @@ You can create a fork of any public repository on GitHub!
 The advantage of using forks is it allows you to develop things without breaking the original repository while you do. This is incredibly useful if you want to contribute to another project that is widely used: you create a fork of that project under your own GitHub account; clone your fork to your local computer; develop your fork by pushing/pulling between your local computer and GitHub. Then, when you are content that your new addition is ready, you fill out a pull request to merge the changes in your fork into the original repository (usually on its `main` branch). The original repo's owner(s) can then review your changes, and, if they accept them, merge it into their repository for widespread adoption. This is known as the [fork and pull model](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/getting-started/about-collaborative-development-models#fork-and-pull-model).
 
 The diagram below illustrates the relationship between a fork (on GitHub) and a clone:
-![Fork digram: userB creates a fork of userA's repository on GitHub. userA and userB each have a clone of the repository on their local computers. Within each user's fork of the repository they have different branches (in userA's repos they are main and dev1; in userB, main and br1).](fork_diagram.png){width=600}
+![Fork digram: userB creates a fork of userA's repository on GitHub. userA and userB each have a clone of the repository on their local computers. Within each user's fork of the repository they have different branches (in userA's repos they are main and dev1; in userB, main and br1).](figures/fork_diagram.png){width=600}
 :::
 
 6. You want to contribute a new development to your partner's repository. To do so, first clone **your fork** of their repository to your local computer:
