--- a/lessons/github/exercise1.qmd
+++ b/lessons/github/exercise1.qmd
@@ -36,7 +36,7 @@ No commits yet
 nothing to commit (create/copy files and use "git add" to track)
 ```
 
-5. Let's add some files for git to track. Use your favorite text editor to create a file called `story_idea.txt` and add the following to it:
+5. Let's add some files for git to track. Use your favorite text editor to create a file called `story.txt` and add the following to it:
 ```bash
 Once upon a time, in a land far,
 far away...
@@ -53,15 +53,15 @@ No commits yet
 
 Untracked files:
   (use "git add <file>..." to include in what will be committed)
-	story_idea.txt
+	story.txt
 
 nothing added to commit but untracked files present (use "git add" to track)
 ```
-git knows you have a file in the directory called `story_idea.txt`, but it isn't tracked by git yet!
+git knows you have a file in the directory called `story.txt`, but it isn't tracked by git yet!
 
-6. Tell git to start tracking `story_idea.txt` by using `git add`. Run the following:
+6. Tell git to start tracking `story.txt` by using `git add`. Run the following:
 ```bash
-git add story_idea.txt
+git add story.txt
 ```
 Now type `git status`. You'll see:
 ```bash
@@ -71,9 +71,9 @@ No commits yet
 
 Changes to be committed:
   (use "git rm --cached <file>..." to unstage)
-	new file:   story_idea.txt
+	new file:   story.txt
 ```
-Notice that it still says there are no commits, but that on the next commit the file `story_idea.txt` will be added. This means that `story_idea.txt` is *staged* for the next commit.
+Notice that it still says there are no commits, but that on the next commit the file `story.txt` will be added. This means that `story.txt` is *staged* for the next commit.
 
 7. Commit the change by running:
 ```bash
@@ -87,7 +87,7 @@ to see the history of your commits. Since this is your first commit, there will 
 
 ### Part 2: Making changes to files
 
-1. You're not happy with your story opening. You don't want to write fairy tales, you want to write SciFi! Use your favorite text editor to open `story_idea.txt` and change the line `Once upon a time, in a land far,` to `A long time ago in a galaxy far,` so that your file now reads:
+1. You're not happy with your story opening. You don't want to write fairy tales, you want to write SciFi! Use your favorite text editor to open `story.txt` and change the line `Once upon a time, in a land far,` to `A long time ago in a galaxy far,` so that your file now reads:
 ```bash
 A long time ago in a galaxy far,
 far away...
@@ -98,18 +98,18 @@ On branch main
 Changes not staged for commit:
   (use "git add <file>..." to update what will be committed)
   (use "git restore <file>..." to discard changes in working directory)
-	modified:   story_idea.txt
+	modified:   story.txt
 
 no changes added to commit (use "git add" and/or "git commit -a")
 ```
-git recognizes that `story_idea.txt` has changed, but your changes have not been committed yet. You can see how the file differs from the last commit you did by typing:
+git recognizes that `story.txt` has changed, but your changes have not been committed yet. You can see how the file differs from the last commit you did by typing:
 ```bash
 git diff
 ```
 
 2. Let's commit your changes so you don't lose them! Let's stage the changes by running `git add` again:
 ```bash
-git add story_idea.txt
+git add story.txt
 ```
 (Alternatively, you can just run `git add -u` to stage changes to all tracked files that have changed.) Now run:
 ```bash
@@ -138,7 +138,7 @@ You'll get `Switched to a new branch 'title-dev'`. To verify, run `git branch` a
   main
 * title-dev
 ```
-Notice that `story_idea.txt` is still here (type `ls`) and that your git history is the same as before (type `git log`). This is because when you create a branch, the branch will have all the same history and files as the main branch.
+Notice that `story.txt` is still here (type `ls`) and that your git history is the same as before (type `git log`). This is because when you create a branch, the branch will have all the same history and files as the main branch.
 
 2. Let's create a file to store our title idea. Use your favorite text editor to create a file called `title.txt` and put in it:
 ```bash
@@ -168,10 +168,22 @@ Now type `ls`. The `title.txt` file is gone! To see why, type `git log`. Your la
 ```bash
 git log title-dev
 ```
+In graph form, your repository currently looks like this:
 
-From now on (or until we merge the branches; more on that below) changes you make on `main` won't affect `title-dev` and vice veras.
+![](figures/git_graphs.001.png){height=300}
 
-5. Let's make some more changes to `story_idea.txt`. Use your favorite text editor to open `story_idea.txt` and add the following lines:
+Here, each dot represents a commit, and the different lines represent a different branch. Following a line illustrates the history as seen by that branch.
+
+::: {.callout-tip}
+You can git graphs like the above in your terminal if you add `--graph` to the `git log` command; i.e.
+```bash
+git log --graph
+```
+:::
+
+Since the commits on title-dev live on their own branch, changes you make on `main` won't affect `title-dev` and vice versa (at least not until we merge the branches; more on that below).
+
+5. Let's make some more changes to `story.txt`. Use your favorite text editor to open `story.txt` and add the following lines:
 ```bash
 
 It is period of civil war.
@@ -195,45 +207,76 @@ You can verify that you're on the `title-dev` branch by typing `git branch`. Now
 ```bash
 Star Wars
 A NEW HOPE
+
+by
+George Lucas
 ```
-Save and exit. Stage the change and commit it:
+Nice work, George! Now save and exit. Stage the change and commit it:
 ```bash
 git add -u
-git commit -m "final title"
+git commit -m "update title"
 ```
-Type `git log` to check your history. Note that there are 4 commits here: the first two from `main` (before you branched off), and the last two on `title-dev`.
+Type `git log` to check your history. Note that there are 4 commits here: the first two from `main` (before you branched off), and the last two on `title-dev`. In graph form, your repo looks like this:
 
-8. Satisfied that your title is perfect, you no longer feel the need to keep the title development on a separate branch. It's ready to be *merged* on to the `main` branch. 
+![](figures/git_graphs.002.png){height=300}
 
-**Optional:** However, before merging the branches, it's usually good to first *rebase* the development branch's history to incorporate the changes that were made on `main` after the branch. This will make the history on `main` cleaner when we merge `title-dev`. To do that, while on the `title-dev` branch run:
-```bash
-git rebase main
-```
-You should get: "Successfully rebased and updated refs/heads/title-dev.". Now type `git log`. You should now see that the commit history on `title-dev` has all 3 commits from the `main` branch *followed by* the 2 commits you made on `title-dev`. 
-
-
-9. You're now ready to merge `title-dev` back into `main`. Switch to the main branch:
+8. Satisfied that your title is perfect, you no longer feel the need to keep the title development on a separate branch. It's ready to be *merged* on to the `main` branch. To do that, switch to the main branch:
 ```bash
 git checkout main
 ```
-and *merge* in the changes on `title-dev` by typing:
+and merge in the changes on `title-dev` by typing:
 ```bash
 git merge title-dev
 ```
-Now type `git log`. If you did the rebase in step 8, you'll see 5 commits: the 3 commits you made on `main` followed by the 2 on `title-dev`. If you skipped the rebase in step 8, you'll instead see 6 commits: the 5 commits (in a different order), followed by an additional "Merge" commit. Either way, if you type:
+This will open up your text editor (which we set to `nano` in the intro). Don't change the commit message, just save and exit to return to your terminal.
+
+Now type `git log`. You should see 6 commits: the initial two commits on main, the first commit on title-dev, the add paragraph commit on main, and the update title commit you made on title-dev, followed by an additional "Merge" commit. This final "merge" commit is to indicate that some of the commits in the history came from another branch (and what the name of the branch was).
+
+If you type:
 ```bash
 ls
 ```
-you'll see that both `story_idea.txt` and `title.txt` are in your directory (on the main branch), and if you look in them, you'll see the most up-to-date versions of both.
+you'll see that both `story.txt` and `title.txt` are in your directory (on the main branch), and if you look in them, you'll see the most up-to-date versions of both. In graph form, your main branch now looks like:
 
-----
+![](figures/git_graphs.003.png){height=300}
 
-*Note*: Again, the `rebase` step is *optional*. You could have skipped step 8 and gone to step 9. Skipping rebasing leads to a more complicated history, but rebasing can sometimes lead to complications that can be difficult to untangle. If you want to know more about the differences, see this article by the Atlassian corporation: [Merging vs. rebasing](https://www.atlassian.com/git/tutorials/merging-vs-rebasing).
+::: {.callout-note}
+There is another way to merge branches called *rebasing*. Rebasing changes the history of the development branch to make it look like all the commits came after the last commit on main. This makes for a cleaner history when merging, but can be more challenging to do correctly. See the Appendix (below) for more information.
+:::
 
-----
-
-10. Now that you've merged your `title-dev` branch, you can delete it to save space. To do that, run:
+9. Now that you've merged your `title-dev` branch, you can delete it to save space. To do that, run:
 ```bash
 git branch -d title-dev
 ```
-*Note:* if you had not merged everything on `title-dev` into `main`, you would have gotten an error preventing you from deleting the branch. The fact that you could delete it gives you confidence that everything on the development branch has been merged.
+::: {.callout-note}
+If you had not merged everything on `title-dev` into `main`, you would have gotten an error preventing you from deleting the branch. The fact that you could delete it gives you confidence that everything on the development branch has been merged.
+:::
+
+### Appendix: Rebasing
+
+Before merging `title-dev` into master in step 8 above, we could have first done a *rebase*. If you rebase a development branch against its parent branch (in this case `main`) it will incorporate all the commits that were made on the parent after the development branch was originally created. To do so, the development branch's history is rearranged so that the additional commits from the parent are placed before all commits that were made on the development branch.
+
+For example, if we had run `git rebase main` while on the `title-dev` branch in step 8 above, `title-dev`'s history would have been rearranged from:
+
+![](figures/git_graphs.002.png){height=300}
+
+to:
+
+![](figures/git_graphs.004.png){height=300}
+
+The **advantage** to rebasing is that when we merge a rebased development branch back into main no "Merge" commit is created, and the history on main is much simpler. So, in our story example, if we had done the following in step 8:
+```bash
+git checkout title-dev
+git rebase main
+git checkout main
+git merge title-dev
+```
+Then main's history would have looked like this:
+
+![](figures/git_graphs.005.png){height=250}
+
+rather than the more complicated graph above.
+
+The **disadvantage** to rebasing is it can be more challenging to handle merge conflicts. When rebasing, conflicts need to be handled at the point they are created in the development branch, rather once at the end when the merge occurs. If resolving a conflict affects a later commit on the development branch, it can cause a cascading series of conflicts that can be a challenge to untangle. The other challenge with rebasing is it can cause issues when collaborating with others on a development branch. Since rebasing changes the history of the branch, it can make it a challenge for your colleagues to keep their clones in sync with yours. For these reasons, rebasing is best for more advanced users.
+
+For more on rebasing, see this article by the Atlassian corporation: [Merging vs. rebasing](https://www.atlassian.com/git/tutorials/merging-vs-rebasing).
